# Refract_MC

./: .eslintrc.cjs  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_KNOWLEDGE.md  README.md  RELEASE_NOTES_1.2.0.txt  install.config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  screenshot-app.mjs
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: development-builds.yml  discord-changelog.yml  publish-aur.yml  release-electron-bridge.yml  release-tauri.yml  release.yml  security-audit.yml
apps/electron-bridge/: README.md  package.json
apps/electron-bridge/src/: index.html  main.js  preload.js  renderer.js
apps/renderer/: .env.example  electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.json  tsconfig.node.json
apps/renderer/src/main/: index.ts
apps/renderer/src/main/ipc/: auth.ipc.ts  config.ipc.ts  curseforge.ipc.ts  index.ts  instance.ipc.ts  java.ipc.ts  minecraft.ipc.ts  modpack.ipc.ts  modrinth.ipc.ts  mods.ipc.ts  news.ipc.ts  skins.ipc.ts  theme.ipc.ts  window.ipc.ts
apps/renderer/src/main/services/: auth.ts  config.ts  discord.ts  download-queue.ts  download.ts  instance-store.ts  java-manager.ts  mod-deps.ts  modpack.ts  modrinth.ts  multimc-import.ts  notifications.ts  paths.ts
apps/renderer/src/main/services/minecraft/: downloader.ts  launcher.ts
apps/renderer/src/preload/: api.ts  env.d.ts  index.ts
apps/renderer/src/renderer/: index.html
apps/renderer/src/renderer/src/: App.tsx  env.d.ts  main.tsx  routeTree.gen.ts
apps/renderer/src/renderer/src/components/instances/: CreateInstanceDialog.tsx  EditInstanceDialog.tsx  InstanceCard.tsx  InstanceModsDialog.tsx  McVersionSelect.tsx  ServersDialog.tsx
apps/renderer/src/renderer/src/components/layout/: AppShell.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
apps/renderer/src/renderer/src/components/minecraft/: InstallProgress.tsx
apps/renderer/src/renderer/src/components/settings/: ThemesDialog.tsx
apps/renderer/src/renderer/src/components/ui/: BlockIcons.tsx  Button.tsx  CornerCat.tsx  PixelScene.tsx  Skeleton.tsx  SkinViewer3DLazy.tsx
apps/renderer/src/renderer/src/hooks/: use-instances.ts
apps/renderer/src/renderer/src/i18n/: index.ts
apps/renderer/src/renderer/src/lib/: api.ts  file-path.ts  skin-face.ts  theme-engine.ts  theme-types.ts
apps/renderer/src/renderer/src/lib/themes/: light.json
apps/renderer/src/renderer/src/routes/: index.tsx
apps/renderer/src/renderer/src/routes/account/: index.tsx
apps/renderer/src/renderer/src/routes/browse/: index.tsx
apps/renderer/src/renderer/src/routes/modpacks/: index.tsx
apps/renderer/src/renderer/src/routes/settings/: index.tsx
apps/renderer/src/renderer/src/routes/skins/: index.tsx
apps/renderer/src/renderer/src/stores/: avatar.ts  language.ts  theme.ts
apps/renderer/src/renderer/src/styles/: globals.css
apps/renderer/src/renderer/src/styles/themes/: default-dark.css  default-light.css
apps/renderer/src/shared/: minecraft-news.ts
apps/tauri/: README.md  RELEASING.md  latest.json.example  package.json
apps/tauri/src/: App.tsx  tauri-api.ts  vault.ts
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: auth.rs  cf.rs  config.rs  content.rs  discord.rs  downloader.rs  external.rs  forge.rs  friends.rs  gamedata.rs  instances.rs  java.rs  launch.rs  lib.rs  log.rs  mc_install.rs  modpack.rs  mods.rs  net.rs  news.rs  paths.rs  process.rs  secrets.rs  shortcuts.rs  skins.rs  system.rs
docs/: README.zh-CN.md
locales/: README.md  en.json  uk.json  zh-CN.json
packaging/aur/: .SRCINFO  PKGBUILD
