[package]
name = "refract-tauri"
version = "1.1.3"
description = "Refract Minecraft Launcher (Tauri proof-of-concept)"
edition = "2021"

# The library Tauri runs; main.rs is a thin launcher around it (Tauri v2 layout).
[lib]
name = "refract_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
# rustls avoids a native OpenSSL dependency on Windows; stream = chunked download.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
# Production token storage: an iota_stronghold vault unlocked by a random master
# key kept in the OS keyring — tokens are handled only in Rust, never in JS.
iota_stronghold = "2"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
rand = "0.8"
hex = "0.4"
zeroize = "1"
