[package]
name = "refract-tauri"
version = "1.3.1"
description = "Refract Minecraft Launcher (Tauri proof-of-concept)"
edition = "2021"

# The library Tauri runs; main.rs is a thin launcher around it (Tauri v2 layout).
[lib]
name = "refract_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
# rustls avoids a native OpenSSL dependency on Windows; stream = chunked download.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "multipart"] }
futures-util = "0.3"
# Already in the tree via tauri/reqwest; direct dep for sleep in retry/backoff
# and the Downloads-folder poll of the blocked-mod resolver.
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
# Production token storage: an iota_stronghold vault unlocked by a random master
# key kept in the OS keyring — tokens are handled only in Rust, never in JS.
iota_stronghold = "2"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
rand = "0.8"
hex = "0.4"
sha1 = "0.10"
sha2 = "0.10"
zeroize = "1"
zip = "2"
flate2 = "1"
tar = "0.4"
base64 = "0.22"
regex = "1"
sys-locale = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
fastnbt = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Registry", "Win32_System_SystemInformation"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["async-io", "blocking-api"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
